--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-bs/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-bs/strings.xml
@@ -4603,6 +4603,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4620,6 +4634,76 @@ u
 ili
 sigurno
 u
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+kr
+i
+Mozilla
+pravila
+i
+ne
+mo
+e
+se
+instalirati
+na
+%
+2
+s
 .
 <
 /
@@ -4746,6 +4830,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4760,6 +4858,77 @@ mo
 e
 se
 instalirati
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+kr
+i
+Mozilla
+pravila
+i
+ne
+mo
+e
+se
+instalirati
+na
+%
+2
+s
 .
 <
 /
@@ -5876,6 +6045,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5921,6 +6104,71 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Ova
+ekstenzija
+je
+blokirana
+zbog
+kr
+enja
+Mozilla
+pravila
+i
+onemogu
+ena
+je
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5935,11 +6183,96 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ova
 ekstenzija
 kr
 i
+Mozilla
+pravila
+i
+onemogu
+ena
+je
+.
+Mo
+ete
+je
+omogu
+iti
+ali
+ovo
+mo
+e
+biti
+rizi
+no
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Ova
+ekstenzija
+je
+ograni
+ena
+zbog
+kr
+enja
 Mozilla
 pravila
 i
