--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
@@ -4684,7 +4684,7 @@ Richtlinien
 und
 kann
 nicht
-auf
+in
 %
 2
 s
@@ -4906,7 +4906,7 @@ Richtlinien
 und
 kann
 nicht
-auf
+in
 %
 2
 s
@@ -6113,7 +6113,6 @@ Mozillas
 Richtlinien
 blockiert
 und
-wurde
 deaktiviert
 .
 <
@@ -6240,27 +6239,26 @@ mozac_feature_addons_status_softblocked_1
 >
 Diese
 Erweiterung
-ist
-eingeschr
-nkt
+wurde
 wegen
 Versto
 es
 gegen
 Mozillas
 Richtlinien
+eingeschr
+nkt
 und
-wurde
 deaktiviert
 .
 Sie
 k
 nnen
-es
+sie
 aktivieren
-aber
 dies
 kann
+aber
 riskant
 sein
 .
