--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-dsb/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-dsb/strings.xml
@@ -4801,6 +4801,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4820,6 +4834,82 @@ abo
 w
 stotne
 problemy
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+se
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+p
+ej
+o
+a
+njedajo
+se
+na
+%
+2
+s
+instal
+rowa
 .
 <
 /
@@ -4952,6 +5042,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4970,6 +5074,83 @@ o
 a
 njedajo
 se
+instal
+rowa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+se
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+p
+ej
+o
+a
+njedajo
+se
+na
+%
+2
+s
 instal
 rowa
 .
@@ -6121,6 +6302,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6165,6 +6360,82 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+To
+to
+roz
+yrjenje
+jo
+dla
+p
+ej
+enja
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+blok
+rowane
+a
+jo
+se
+znjem
+ni
+o
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6178,6 +6449,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 To
@@ -6195,6 +6480,85 @@ Mozilla
 p
 ej
 o
+a
+jo
+se
+znjem
+ni
+o
+.
+M
+o
+o
+jo
+zm
+ni
+ale
+to
+jo
+sna
+riskantne
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+To
+to
+roz
+yrjenje
+jo
+dla
+p
+ej
+enja
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+wobgranicowane
 a
 jo
 se
