--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
@@ -4684,6 +4684,77 @@ when
 attempting
 to
 install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+se
+puede
+instalar
+en
+%
+2
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
 an
 add
 -
@@ -4826,6 +4897,78 @@ no
 se
 puede
 instalar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+se
+puede
+instalar
+en
+%
+2
+s
 .
 <
 /
@@ -6182,10 +6325,12 @@ ha
 sido
 deshabilitada
 .
-Puede
-habilitarlo
-pero
+Se
 puede
+habilitar
+pero
+podr
+a
 ser
 riesgoso
 .
