--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-hsb/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-hsb/strings.xml
@@ -4728,6 +4728,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4748,6 +4762,81 @@ w
 stotne
 problemy
 zawinuje
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+so
+p
+e
+iwo
+prawid
+am
+Mozilla
+p
+e
+d
+e
+a
+njeda
+so
+na
+%
+2
+s
+instalowa
 .
 <
 /
@@ -4873,6 +4962,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4891,6 +4994,82 @@ e
 a
 njeda
 so
+instalowa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+so
+p
+e
+iwo
+prawid
+am
+Mozilla
+p
+e
+d
+e
+a
+njeda
+so
+na
+%
+2
+s
 instalowa
 .
 <
@@ -6027,6 +6206,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6071,6 +6264,80 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Tute
+roz
+rjenje
+je
+p
+e
+d
+enja
+p
+e
+iwo
+prawid
+am
+Mozilla
+dla
+zablokowane
+a
+je
+so
+znjem
+ni
+o
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6084,6 +6351,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Tute
@@ -6100,6 +6381,84 @@ p
 e
 d
 e
+a
+je
+so
+znjem
+ni
+o
+.
+M
+e
+e
+jo
+zm
+ni
+ale
+to
+je
+snano
+riskantne
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Tute
+roz
+rjenje
+je
+p
+e
+d
+enja
+p
+e
+iwo
+prawid
+am
+Mozilla
+dla
+wobmjezowane
 a
 je
 so
