--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-is/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-is/strings.xml
@@ -4680,6 +4680,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ekki
 t
@@ -4704,6 +4718,80 @@ hrun
 e
 a
 ryggisvillum
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+br
+tur
+gegn
+reglum
+Mozilla
+og
+er
+v
+ekki
+h
+gt
+a
+setja
+a
+upp
+%
+2
+s
 .
 <
 /
@@ -4836,6 +4924,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4855,6 +4957,81 @@ a
 setja
 a
 upp
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+br
+tur
+gegn
+reglum
+Mozilla
+og
+er
+v
+ekki
+h
+gt
+a
+setja
+a
+upp
+%
+2
+s
 .
 <
 /
@@ -5997,6 +6174,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6043,6 +6234,74 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Loka
+er
+ennan
+forritsauka
+vegna
+brota
+reglum
+Mozilla
+og
+hefur
+hann
+v
+veri
+ger
+ur
+virkur
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6057,11 +6316,96 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 essi
 forritsauki
 br
 tur
+gegn
+reglum
+Mozilla
+og
+hefur
+veri
+ger
+ur
+virkur
+.
+getur
+virkja
+etta
+en
+a
+g
+ti
+veri
+h
+ttusamt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+essi
+forritsauki
+er
+takmarka
+ur
+vegna
+brota
 gegn
 reglum
 Mozilla
