--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-it/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-it/strings.xml
@@ -4570,6 +4570,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Impossibile
 installare
@@ -4588,6 +4602,76 @@ stabilit
 o
 la
 sicurezza
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+viola
+i
+criteri
+di
+Mozilla
+e
+non
+pu
+essere
+installato
+in
+%
+2
+s
 .
 <
 /
@@ -4714,6 +4798,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4728,6 +4826,77 @@ non
 pu
 essere
 installato
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+viola
+i
+criteri
+di
+Mozilla
+e
+non
+pu
+essere
+installato
+in
+%
+2
+s
 .
 <
 /
@@ -5828,6 +5997,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5873,6 +6056,71 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Questa
+estensione
+bloccata
+in
+quanto
+viola
+i
+criteri
+di
+Mozilla
+ed
+stata
+disattivata
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5887,9 +6135,93 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Questa
 estensione
+viola
+i
+criteri
+di
+Mozilla
+ed
+stata
+disattivata
+.
+possibile
+attivarla
+ma
+il
+suo
+utilizzo
+potrebbe
+comportare
+dei
+rischi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Questa
+estensione
+soggetta
+a
+limitazioni
+in
+quanto
 viola
 i
 criteri
