--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rBR/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rBR/strings.xml
@@ -4668,6 +4668,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4690,6 +4704,75 @@ estabilidade
 ou
 seguran
 a
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+viola
+diretrizes
+da
+Mozilla
+n
+o
+pode
+ser
+instalado
+no
+%
+2
+s
 .
 <
 /
@@ -4817,6 +4900,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4830,6 +4927,76 @@ o
 pode
 ser
 instalado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+viola
+diretrizes
+da
+Mozilla
+n
+o
+pode
+ser
+instalado
+no
+%
+2
+s
 .
 <
 /
@@ -5943,6 +6110,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5986,6 +6167,71 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Esta
+extens
+o
+foi
+bloqueada
+por
+violar
+diretrizes
+da
+Mozilla
+e
+foi
+desativada
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6000,11 +6246,93 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Esta
 extens
 o
 viola
+diretrizes
+da
+Mozilla
+e
+foi
+desativada
+.
+Voc
+tem
+op
+o
+de
+ativar
+mas
+pode
+ser
+arriscado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Esta
+extens
+o
+est
+restrita
+por
+violar
 diretrizes
 da
 Mozilla
