--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
@@ -4608,6 +4608,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4628,6 +4642,76 @@ z
 varnostjo
 ali
 zanesljivostjo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+kr
+i
+Mozilline
+pravilnike
+in
+ga
+ni
+mogo
+e
+namestiti
+v
+%
+2
+s
 .
 <
 /
@@ -4754,6 +4838,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4768,6 +4866,77 @@ ni
 mogo
 e
 namestiti
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+kr
+i
+Mozilline
+pravilnike
+in
+ga
+ni
+mogo
+e
+namestiti
+v
+%
+2
+s
 .
 <
 /
@@ -5906,6 +6075,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Dodatek
 %
@@ -5950,6 +6133,73 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Ta
+raz
+iritev
+je
+blokirana
+zaradi
+kr
+enja
+Mozillinih
+pravilnikov
+zato
+je
+bila
+onemogo
+ena
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5964,6 +6214,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ta
 raz
@@ -5972,6 +6236,75 @@ kr
 i
 Mozilline
 pravilnike
+zato
+je
+bila
+onemogo
+ena
+.
+Lahko
+jo
+omogo
+ite
+vendar
+je
+to
+morda
+nevarno
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Ta
+raz
+iritev
+je
+omejena
+zaradi
+kr
+enja
+Mozillinih
+pravilnikov
 zato
 je
 bila
