--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
@@ -6166,15 +6166,19 @@ name
 mozac_feature_addons_status_blocklisted_1
 "
 >
-Detta
+Det
+h
+r
 till
-gg
+gget
 r
-blockerad
-f
-r
+blockerat
+p
+grund
+av
 att
-bryta
+det
+bryter
 mot
 Mozillas
 policyer
@@ -6305,16 +6309,20 @@ name
 mozac_feature_addons_status_softblocked_1
 "
 >
-Detta
+Det
+h
+r
 till
-gg
+gget
 r
 begr
 nsat
-f
-r
+p
+grund
+av
 att
-bryta
+det
+bryter
 mot
 Mozillas
 policyer
