--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-rm/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-rm/strings.xml
@@ -351,53 +351,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Betg
-memorisar
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-new
-or
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_save_2
 "
 >
@@ -527,51 +480,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Betg
-actualisar
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_update_2
 "
 >
@@ -636,64 +544,6 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Il
-champ
-dal
-pled
--
-clav
-na
-dastga
-betg
-esser
-vid
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-password
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_error_empty_password_2
 "
 >
@@ -702,62 +552,6 @@ in
 pled
 -
 clav
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-login
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_error_unknown_cause
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Impussibel
-da
-memorisar
-las
-datas
-d
-\
-'
-annunzia
 <
 /
 string
@@ -798,73 +592,6 @@ il
 pled
 -
 clav
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-username
-and
-password
-and
-user
-decides
-if
-app
-should
-save
-the
-new
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_save_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Memorisar
-questa
-infurmaziun
-d
-\
-'
-annunzia
-?
 <
 /
 string
@@ -949,74 +676,6 @@ app
 should
 update
 the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_update_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Actualisar
-questa
-infurmaziun
-d
-\
-'
-annunzia
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-password
-for
-an
-existing
-login
-and
-user
-decides
-if
-app
-should
-update
-the
 password
 .
 -
@@ -1035,81 +694,6 @@ il
 pled
 -
 clav
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-username
-for
-an
-existing
-login
-without
-a
-username
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Agiuntar
-in
-num
-d
-\
-'
-utilisader
-al
-pled
--
-clav
-memoris
 ?
 <
 /
@@ -2059,57 +1643,6 @@ Option
 in
 expanded
 select
-login
-prompt
-that
-links
-to
-login
-settings
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Administrar
-las
-datas
-d
-\
-'
-annunzia
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-expanded
-select
 password
 prompt
 that
@@ -2133,60 +1666,6 @@ ils
 pleds
 -
 clav
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Expander
-las
-datas
-d
-\
-'
-annunzia
-proponidas
 <
 /
 string
@@ -2239,60 +1718,6 @@ for
 collapsing
 the
 saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Reducir
-las
-datas
-d
-\
-'
-annunzia
-proponidas
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-saved
 passwords
 options
 in
@@ -2317,62 +1742,6 @@ pleds
 -
 clav
 memorisads
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
-login
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-login
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_saved_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Datas
-d
-\
-'
-annunzia
-proponidas
 <
 /
 string
@@ -2611,14 +1980,14 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description
+mozac_feature_prompts_suggest_strong_password_description_2
 "
 moz
 :
 removedIn
 =
 "
-130
+133
 "
 tools
 :
@@ -2639,23 +2008,20 @@ pled
 -
 clav
 gener
-a
-moda
-casuala
+casualmain
 .
-Acceda
-svelt
-a
-tes
-pleds
--
-clav
-cun
-als
-memorisar
+El
+vegn
+memoris
 en
 tes
 conto
+per
+al
+duvrar
+en
+l
+avegnir
 .
 <
 /
@@ -2682,12 +2048,12 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description_2
+mozac_feature_prompts_suggest_strong_password_description_3
 "
 >
 Protegia
 tes
-contos
+conto
 cun
 utilisar
 in
@@ -3044,64 +2410,6 @@ Header
 for
 the
 select
-credit
-card
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-credit
-card
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_select_credit_card
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tscherner
-ina
-carta
-da
-credit
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
 card
 prompt
 to
@@ -3131,61 +2439,6 @@ Utilisar
 ina
 carta
 memorisada
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-card
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Expander
-las
-cartas
-da
-credit
-proponidas
 <
 /
 string
@@ -3236,60 +2489,6 @@ description
 for
 collapsing
 the
-select
-credit
-card
-options
-in
-the
-select
-credit
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Reducir
-las
-cartas
-da
-credit
-proponidas
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
 saved
 card
 options
@@ -3313,59 +2512,6 @@ Reducir
 las
 cartas
 memorisadas
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-the
-expanded
-select
-credit
-card
-prompt
-that
-links
-to
-credit
-cards
-settings
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_credit_cards
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Administrar
-las
-cartas
-da
-credit
 <
 /
 string
@@ -3493,69 +2639,6 @@ the
 title
 of
 the
-save
-credit
-card
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_save_credit_card_prompt_body
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Il
-numer
-da
-la
-carta
-vegn
-cript
-.
-Il
-code
-da
-segirezza
-na
-vegn
-betg
-memoris
-.
-<
-/
-string
->
-<
-!
--
--
-Subtitle
-text
-displayed
-under
-the
-title
-of
-the
 saved
 card
 dialog
@@ -3660,57 +2743,6 @@ description
 for
 expanding
 the
-select
-addresses
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Expander
-las
-adressas
-proponidas
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
 saved
 addresses
 options
@@ -3732,57 +2764,6 @@ mozac_feature_prompts_expand_address_content_description_2
 "
 >
 Extender
-las
-adressas
-proponidas
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-address
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Cumprimer
 las
 adressas
 proponidas
