--- a/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
@@ -5289,7 +5289,6 @@ browser_main_menu_handlebar_content_description
 "
 >
 Cerrar
-la
 hoja
 del
 men
@@ -5333,7 +5332,7 @@ browser_extensions_menu_handlebar_content_description
 >
 Cerrar
 hoja
-de
+del
 men
 de
 extensiones
@@ -5374,11 +5373,11 @@ name
 browser_save_menu_handlebar_content_description
 "
 >
-Cerrar
-guardar
+Cerra
 hoja
-de
+del
 men
+guardar
 <
 /
 string
@@ -5418,9 +5417,8 @@ browser_tools_menu_handlebar_content_description
 >
 Cerrar
 hoja
-de
+del
 men
-de
 herramientas
 <
 /
@@ -5462,9 +5460,8 @@ browser_custom_tab_menu_handlebar_content_description
 >
 Cerrar
 hoja
-de
+del
 men
-de
 pesta
 a
 personalizada
@@ -8681,7 +8678,7 @@ BrandUsage
 UnusedResources
 "
 >
-Personaliza
+Personalizar
 Firefox
 con
 extensiones
@@ -8725,13 +8722,13 @@ ignore
 UnusedResources
 "
 >
-Agregue
+Agreg
 extensiones
 de
 terceros
 para
 mejorar
-su
+tu
 seguridad
 productividad
 y
@@ -8840,7 +8837,7 @@ removedIn
 133
 "
 >
-Empez
+Empezar
 a
 navegar
 .
@@ -8990,9 +8987,8 @@ ignore
 UnusedResources
 "
 >
-Origen
-de
 uBlock
+Origin
 <
 /
 string
@@ -9034,7 +9030,7 @@ UnusedResources
 "
 >
 Bloquea
-anuncios
+publicidades
 de
 forma
 eficaz
@@ -9098,10 +9094,8 @@ ignore
 UnusedResources
 "
 >
-Tej
-n
-de
-privacidad
+Privacy
+Badger
 <
 /
 string
@@ -9148,16 +9142,15 @@ anti
 -
 rastreo
 .
-Det
-n
+Fren
 a
 los
 rastreadores
 invisibles
 y
 a
-los
-anuncios
+las
+publicidades
 que
 esp
 an
