--- a/mobile/android/fenix/app/src/main/res/values-fa/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fa/strings.xml
@@ -1634,56 +1634,6 @@ string
 name
 =
 "
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
 navbar_cfr_message_2
 "
 >
@@ -3079,60 +3029,6 @@ string
 !
 -
 -
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Label
-for
-plus
-icon
-used
-to
-add
-extensions
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_extension_plus_icon_content_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -4246,6 +4142,44 @@ string
 !
 -
 -
+Content
+description
+for
+the
+translate
+page
+toolbar
+button
+that
+opens
+the
+translations
+dialog
+when
+no
+translation
+has
+occurred
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_toolbar_translate
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Locale
 Settings
 Fragment
@@ -4371,6 +4305,20 @@ name
 =
 "
 search_scan_button
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -5118,232 +5066,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-%
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Title
 for
 set
@@ -5366,121 +5088,6 @@ name
 =
 "
 juno_onboarding_default_browser_title_nimbus_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-\
-n
-\
-n
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -5588,69 +5195,6 @@ name
 juno_onboarding_sign_in_title_2
 "
 >
-.
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-.
 .
 <
 /
@@ -6520,6 +6064,20 @@ name
 =
 "
 preferences_site_permissions
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -13248,49 +12806,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -15065,48 +14580,6 @@ name
 =
 "
 bookmark_add_new_folder_button_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
 "
 >
 <
@@ -19153,51 +18626,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Message
 for
 copying
@@ -19848,51 +19276,6 @@ name
 delete_history_prompt_title
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-(
-)
-.
 <
 /
 string
@@ -21657,49 +21040,6 @@ string
 !
 -
 -
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Button
 label
 for
@@ -22061,98 +21401,6 @@ name
 =
 "
 etp_cryptominers_description
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 .
@@ -27696,50 +26944,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -28560,20 +27764,6 @@ name
 "
 action_bar_up_description
 "
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 <
 /
@@ -29009,53 +28199,6 @@ ignore
 UnusedResources
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Beta
 <
 /
 string
