--- a/mobile/android/fenix/app/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-nn-rNO/strings.xml
@@ -1865,70 +1865,6 @@ string
 name
 =
 "
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Denne
-linja
-g
-ymer
-seg
-n
-r
-du
-blar
-nedover
-for
-gi
-ekstra
-visingsplass
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
 navbar_cfr_message_2
 "
 >
@@ -3617,63 +3553,6 @@ til
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Label
-for
-plus
-icon
-used
-to
-add
-extensions
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_extension_plus_icon_content_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Legg
-til
-utviding
 <
 /
 string
@@ -6310,8 +6189,60 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Skann
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+Skann
+QR
+-
+kode
 <
 /
 string
@@ -7179,264 +7110,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Varsel
-hjelper
-deg
-gjere
-meir
-med
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Synkroniser
-fanene
-dine
-mellom
-einingar
-handsam
-nedlastingar
-f
-tips
-om
-korleis
-du
-f
-r
-mest
-muleg
-ut
-av
-personvernet
-til
-%
-s
-og
-meir
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Hald
-fram
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ikkje
-no
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -7812,145 +7485,6 @@ string
 !
 -
 -
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Den
-ideelle
-nettlesaren
-v
-r
-hindrar
-selskap
-i
-spore
-aktiviteten
-din
-i
-l
-ynd
-p
-nettet
-.
-\
-n
-\
-nLes
-meir
-i
-personvernerkl
-ringa
-v
-r
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-peronvernerkl
-ring
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -8065,85 +7599,6 @@ p
 tvers
 av
 einingar
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-N
-r
-du
-er
-innlogga
-og
-synkronisert
-er
-du
-tryggare
-.
-Firefox
-krypterer
-passorda
-bokmerka
-med
-meir
-.
 <
 /
 string
@@ -8752,6 +8207,446 @@ UnusedResources
 >
 Ikkje
 no
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Tilpass
+Firefox
+med
+utvidingar
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Start
+nettlesinga
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Utforsk
+fleire
+utvidingar
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Start
+nettlesinga
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+S
+k
+etter
+bilde
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
 <
 /
 string
@@ -9542,9 +9437,48 @@ name
 "
 preferences_site_permissions
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nettstadl
 yve
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+Nettstadinnstillingar
 <
 /
 string
@@ -18951,51 +18885,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Byt
-namn
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -20272,6 +20161,30 @@ string
 -
 -
 Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
+"
+>
+Flytt
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
 overflow
 menu
 edit
@@ -21054,6 +20967,94 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+%
+s
+vart
+sletta
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+snackbar
+message
+for
+deleting
+multiple
+items
+.
+Parameter
+is
+the
+number
+of
+items
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_multiple_items
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Sletta
+element
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -21142,51 +21143,6 @@ til
 ei
 ny
 mappe
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Lat
-att
-bokmerke
 <
 /
 string
@@ -21474,6 +21430,46 @@ nettstadane
 dine
 seinare
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ny
+mappe
 <
 /
 string
@@ -22797,6 +22793,122 @@ studies_off
 "
 >
 Av
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+L
+yve
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Innhald
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+Be
+alltid
+om
+skrivebordsside
 <
 /
 string
@@ -24519,223 +24631,6 @@ string
 -
 -
 Text
-for
-option
-one
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_0
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-N
-ytral
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-two
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_1
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Veldig
-misforn
-gd
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-three
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Misforn
-gd
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-four
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Forn
-gd
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-five
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_4
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Veldig
-forn
-gd
-<
-/
-string
->
-<
-!
--
--
-Text
 shown
 in
 the
@@ -25610,6 +25505,66 @@ in
 snackbar
 when
 user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Bokmerke
+lagra
+i
+%
+s
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
 adds
 a
 site
@@ -26066,53 +26021,6 @@ tab_collection_dialog_positive
 "
 >
 Slett
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Startar
-fullskjermmodus
 <
 /
 string
@@ -26896,63 +26804,6 @@ delete_history_prompt_title
 Tidsrom
 for
 sletting
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Fjernar
-historikk
-(
-inkludert
-historikk
-synkronisert
-fr
-andre
-einingar
-)
-infokapslar
-og
-andre
-nettlesingsdata
-.
 <
 /
 string
@@ -29046,50 +28897,6 @@ string
 name
 =
 "
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nettlesaravtrykk
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
 preference_enhanced_tracking_protection_custom_known_fingerprinters
 "
 >
@@ -29556,118 +29363,6 @@ for
 utvinne
 digitale
 valutaer
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nettlesaravtrykk
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Stoppar
-innsamling
-av
-unikt
-identifiserbare
-data
-om
-eininga
-di
-som
-kan
-brukast
-til
-spore
-deg
-rundt
-om
-p
-nettet
 .
 <
 /
@@ -37581,51 +37276,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-OK
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -38598,20 +38248,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Naviger
@@ -41984,109 +41620,6 @@ string
 name
 =
 "
-review_quality_check_contextual_onboarding_caption_3
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ved
-velje
-Ja
-pr
-v
-det
-godtek
-du
-%
-1
-s
-sine
-%
-2
-s
-og
-%
-3
-s
-sine
-%
-4
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Caption
-text
-to
-be
-displayed
-in
-review
-quality
-check
-contextual
-onboarding
-card
-above
-the
-opt
--
-in
-button
-.
-First
-parameter
-is
-Firefox
-app
-name
-third
-parameter
-is
-the
-Fakespot
-product
-name
-.
-Second
-&
-fourth
-are
-for
-clickable
-texts
-defined
-in
-review_quality_check_contextual_onboarding_privacy_policy_3
-and
-review_quality_check_contextual_onboarding_terms_use
-.
--
--
->
-<
-string
-name
-=
-"
 review_quality_check_contextual_onboarding_caption_4
 "
 >
@@ -42499,53 +42032,6 @@ UnusedResources
 Opne
 vurderingskontroll
 ren
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Beta
 <
 /
 string
@@ -46498,52 +45984,6 @@ screen
 Title
 of
 the
-download
-languages
-preference
-screen
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-download_languages_toolbar_title_preference
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Last
-ned
-spr
-k
-<
-/
-string
->
-<
-!
--
--
-Title
-of
-the
 toolbar
 for
 the
@@ -47789,186 +47229,6 @@ delete_language_file_dialog_negative_button_text
 "
 >
 Avbryt
-<
-/
-string
->
-<
-!
--
--
-Title
-for
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-confirm
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
-The
-first
-parameter
-is
-the
-name
-of
-the
-language
-for
-example
-"
-Spanish
-"
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_title
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Avbryte
-nedlastinga
-av
-%
-1
-s
-?
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-confirms
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_positive_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ja
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-dismiss
-the
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_negative_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nei
 <
 /
 string
@@ -49638,70 +48898,6 @@ shown
 in
 prompt
 for
-homepage
-microsurvey
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_prompt_homepage_title
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Kor
-n
-gd
-er
-du
-med
-startsida
-til
-Firefox
-?
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-prompt
-for
 printing
 microsurvey
 .
@@ -50211,59 +49407,6 @@ Ikon
 for
 unders
 kingsfunksjon
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-opening
-microsurvey
-bottom
-sheet
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_open_handle_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Opne
-unders
-king
 <
 /
 string
