--- a/mobile/android/focus-android/app/src/main/res/values-si/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-si/strings.xml
@@ -1296,33 +1296,6 @@ notification_erase_title_android_14
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -1741,6 +1714,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 /
@@ -1802,6 +1782,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -1867,6 +1854,13 @@ name
 "
 text_selection_search_action_focus_beta
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 /
@@ -1931,6 +1925,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 /
@@ -1982,6 +1983,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -6265,6 +6273,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -7508,6 +7530,46 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -7566,6 +7628,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -7712,6 +7781,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -7823,6 +7899,14 @@ name
 "
 your_rights_content3
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -7921,6 +8005,13 @@ name
 =
 "
 your_rights_content4
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -8046,6 +8137,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -10498,6 +10596,13 @@ name
 "
 preference_studies_summary
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 .
 <
@@ -11577,51 +11682,6 @@ name
 =
 "
 open_new_tab_snackbar
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -12935,6 +12995,13 @@ name
 "
 errorpage_httpsonly_message2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -13792,6 +13859,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -13824,6 +13905,20 @@ name
 =
 "
 exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
