--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fi/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fi/strings.xml
@@ -4554,6 +4554,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Laajennusta
 %
@@ -4572,6 +4586,75 @@ tai
 tietoturvaongelmia
 on
 suuri
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+rikkoo
+Mozillan
+k
+yt
+nt
+j
+eik
+sit
+voida
+asentaa
+%
+2
+siin
 .
 <
 /
@@ -4699,6 +4782,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4713,6 +4810,76 @@ eik
 sit
 voida
 asentaa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+rikkoo
+Mozillan
+k
+yt
+nt
+j
+eik
+sit
+voida
+asentaa
+%
+2
+siin
 .
 <
 /
@@ -5840,6 +6007,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5883,6 +6064,77 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+T
+m
+laajennus
+on
+estetty
+Mozillan
+k
+yt
+nt
+jen
+rikkomisen
+vuoksi
+ja
+se
+on
+poistettu
+k
+yt
+st
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5896,6 +6148,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 T
@@ -5917,6 +6183,81 @@ st
 Voit
 ottaa
 sen
+k
+ytt
+n
+mutta
+se
+voi
+olla
+riskialtista
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+T
+m
+laajennus
+on
+rajoitettu
+Mozillan
+k
+yt
+nt
+jen
+rikkomisen
+vuoksi
+ja
+se
+on
+poistettu
+k
+yt
+st
+.
+Voit
+ottaa
+laajennuksen
 k
 ytt
 n
