--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-nl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-nl/strings.xml
@@ -4548,6 +4548,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4568,6 +4582,77 @@ stabiliteits
 of
 beveiligingsproblemen
 geeft
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+schendt
+het
+beleid
+van
+Mozilla
+en
+kan
+niet
+in
+%
+2
+s
+worden
+ge
+nstalleerd
 .
 <
 /
@@ -4697,6 +4782,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4709,6 +4808,78 @@ Mozilla
 en
 kan
 niet
+worden
+ge
+nstalleerd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+schendt
+het
+beleid
+van
+Mozilla
+en
+kan
+niet
+in
+%
+2
+s
 worden
 ge
 nstalleerd
@@ -5821,6 +5992,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5832,6 +6017,72 @@ beveiligings
 -
 of
 stabiliteitsproblemen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Deze
+extensie
+is
+geblokkeerd
+wegens
+schending
+van
+het
+beleid
+van
+Mozilla
+en
+is
+uitgeschakeld
 .
 <
 /
@@ -5875,10 +6126,92 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Deze
 extensie
 schendt
+het
+beleid
+van
+Mozilla
+en
+is
+uitgeschakeld
+.
+U
+kunt
+hem
+inschakelen
+maar
+dit
+kan
+riskant
+zijn
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Deze
+extensie
+is
+beperkt
+wegens
+schending
+van
 het
 beleid
 van
